VI_ingress/two_services_with_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellok8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hellok8s
  template:
    metadata:
      labels:
        app: hellok8s
    spec:
      containers:
        - image: 957360688/hellok8s:v3
          name: hellok8s-container

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: nginx-container


---

apiVersion: v1
kind: Service
metadata:
  name: service-hellok8s-clusterip
spec:
  type: ClusterIP
  selector:
    app: hellok8s
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: service-nginx-clusterip
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 4000
      targetPort: 80

---



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  # From version v1.0.0 of the Ingress-NGINX Controller, a ingressclass object is required.
  # In the default installation, an ingressclass object named nginx has already been created.
  # see it using: kubectl -n ingress-nginx get ingressclasses
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:  # 匹配前缀为 /hello 的路由规则，重定向到 hellok8s:v3 服务
              service:
                name: service-hellok8s-clusterip
                port:
                  number: 3000
            pathType: Prefix
            path: /hello

          - backend:  # 匹配前缀为 / 的跟路径重定向到 nginx
              service:
                name: service-nginx-clusterip
                port:
                  number: 4000
            pathType: Prefix
            path: /
